bugfix/logout-alignment

--- a/src/components/Logout/Logout.scss
+++ b/src/components/Logout/Logout.scss
@@ -46,6 +46,7 @@
     text-align: "center";
     line-height: 18px;
     margin-bottom: 2rem;
+    margin-top: 0.5rem;
     @media (max-width:576px){
       text-align: "center";
       font-size: 13px;
